# geometry-of-noise-molab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: reproduce.yml
data/: README.md  circle_manifold.npz  energy_landscape_2d.npz  grf_flow_strip.npz  grf_gallery.npz  linear_score_fit.npz  manifest.json  shrinkage_heatmap.npz  singular_gradient.npz  stability_curves.npz  tiny_mlp_results.npz
docs/: implementation_notes.md  paper_summary.md
notebooks/: walkthrough.py
notebooks/__marimo__/session/: walkthrough.py.json
scripts/: linear_score_fit.py  precompute_arrays.py  render_thumbnail.py  reproduce.py  train_score_mlp.py
src/: exact_affine.py  grf_2d.py  schedules.py  sympy_validation.py  tiny_mlp.py
src/widgets/: two_d_slider.py
tests/: test_exact_affine.py  test_grf_2d.py  test_schedules.py  test_sympy_validation.py  test_tiny_mlp.py
