[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-of-noise-molab"
version = "0.0.1"
description = "marimo molab notebook reproducing the geometry-and-stability story of arXiv:2602.18428."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo",
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
